fix collapse arrow position

--- a/src/components/Items/styles/_ItemList.scss
+++ b/src/components/Items/styles/_ItemList.scss
@@ -42,10 +42,6 @@
                     color: #999;
                 }
             }
-
-            .arrow {
-                display: flex;
-            }
         }
 
         .item-attributes {
