--- a/src/components/Items/styles/_SoulshieldList.scss
+++ b/src/components/Items/styles/_SoulshieldList.scss
@@ -138,10 +138,6 @@
 
             .ant-collapse-header {
                 height: 4rem;
-
-                .arrow {
-                    margin: 0 !important;
-                }
             }
         }
     }
