--- a/src/components/NavBar/styles/_NavOverlayMenu.scss
+++ b/src/components/NavBar/styles/_NavOverlayMenu.scss
@@ -44,10 +44,6 @@
             &:hover {
                 background: none !important;
                 color: white;
-
-                .arrow {
-                    color: white;
-                }
             }
         }
 
