--- a/src/styles/_antd.scss
+++ b/src/styles/_antd.scss
@@ -215,7 +215,9 @@
                 position: relative;
                 color: white;
                 left: -0.5rem;
-                line-height: 4rem;
+                line-height: 100%;
+                display: flex;
+                align-items: center;
             }
 
             & > div,
